<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <!-- home screen title -->
    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Events@USC"
        android:textSize="36sp"
        android:textColor="@color/purple_500"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="32dp" />

    <!-- container for login -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center">

        <!-- email input box -->
        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:layout_marginBottom="16dp" />

        <!-- password input box -->
        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:layout_marginBottom="24dp" />

        <!-- "login" button option -->
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login (existing users)"
            android:backgroundTint="@color/purple_200"
            android:textColor="@android:color/white"
            android:layout_marginBottom="16dp" />

        <!-- "Create New Account Text" -->
        <Button
            android:id="@+id/new_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Create an account (new users)"
            android:backgroundTint="@color/purple_200"
            android:textColor="@android:color/white"
            android:layout_marginBottom="16dp" />

        <!-- "forgot password" button -->
        <Button
            android:id="@+id/forgot_password_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Forgot Password?"
            android:backgroundTint="@color/teal_700"
            android:textColor="@android:color/white"
            android:layout_marginBottom="16dp" />


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
