<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <!-- add event screen title -->
    <TextView
        android:id="@+id/add_event_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add New Event"
        android:textSize="24sp"
        android:textColor="@color/purple_500"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="32dp" />

    <!-- container for form -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:padding="16dp">

        <!-- event name input box -->
        <EditText
            android:id="@+id/event_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Event Name"
            android:inputType="text"
            android:padding="12dp"
            android:layout_marginBottom="16dp" />

        <!-- event description input box -->
        <EditText
            android:id="@+id/event_description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Event Description"
            android:inputType="textMultiLine"
            android:padding="12dp"
            android:layout_marginBottom="16dp" />

        <!-- date/time info input box -->
        <EditText
            android:id="@+id/event_date_time_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Date and Time (ex. 11/6/24, 10-11am)"
            android:inputType="datetime"
            android:padding="12dp"
            android:layout_marginBottom="16dp" />

        <!-- location input box -->
        <EditText
            android:id="@+id/event_location_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Location"
            android:inputType="text"
            android:padding="12dp"
            android:layout_marginBottom="16dp" />
        <EditText
            android:id="@+id/event_latitude_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Event Latitude" />

        <EditText
            android:id="@+id/event_longitude_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Event Longitude" />

        <!-- "submit" button option -->
        <Button
            android:id="@+id/add_event_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add Event"
            android:backgroundTint="@color/teal_700"
            android:textColor="@android:color/white" />

        <!-- "cancel" button option -->
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cancel Action"
            android:backgroundTint="@color/orange"
            android:textColor="@android:color/white" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
